syntax = "proto3";

package auth;
option go_package = "github.com/remanam/go_currency_service/auth_service/pb";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

    message RegisterRequest {
        string username = 1;
        string email = 2;
        string password = 3;
    }

    message RegisterResponse {
        int32 user_id = 1;
        string access_token = 2;
        string refresh_token = 3;
    }

    message LoginRequest {
        string username = 1;
        string password = 2;
    }

    message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    }

    message ValidateTokenRequest {
    string access_token = 1;
    }

    message ValidateTokenResponse {
    bool valid = 1;
    int32 user_id = 2;
    repeated string roles = 3;
    }

    message RefreshTokenRequest {
        string refresh_token = 1;
    }

    message RefreshTokenResponse {
        string access_token = 1;
        string refresh_token = 2;
    }

    message LogoutRequest {
        string refresh_token = 1;
    }

    message LogoutResponse {
        bool success = 1;
    }